adding the menu and other moduler

--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,12 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        },
+        "merge-plugin": {
+            "include": [
+                "Modules/*/composer.json"
+            ]
+
         }
     },
     "config": {
